rm deprecated java flags for tomcat